# Verifi-Rag

./: .gitignore
services/chat-service/Test/: truth_test.py
services/chat-service/app/: config.py  main.py  models.py
services/chat-service/app/database/: mysql.py
services/chat-service/app/graph/: state.py  workflow.py
services/chat-service/app/llm/: gemini_client.py  openai_client.py
services/chat-service/app/routers/: chat.py
services/embedding-service/: README.md  config.py  database.py  main.py  pyproject.toml  routes.py  service.py
services/ingestion-service/app/: configs.py  database.py  main.py  ocr_extraction.py  routes.py  sql.py  storage.py  test_date_json.py  view_chunks.py
services/ingestion-service/app/ingestion/: ingestion.py  models.py  router.py  schemas.py  service.py
services/ingestion-service/app/libr/: chunking.py  embedding_base.py  embedding_service.py  ocr_extraction.py
services/ingestion-service/app/libr/providers/: embedding.py
services/ingestion-service/app/orchestrators/: ingestion.py
services/ingestion-service/app/repositories/: document.py  job.py  postgres.py  qdrant.py
services/ingestion-service/app/services/: chunking.py  extraction.py  unstructured_extraction.py
services/ingestion-service/app/shared/: configs.py  utils.py
services/search-service/: main.py  qdrantc.py  routes_search.py  vector.py
shared/: exceptions.py  schemas.py
